// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EncountersTable should render with full props 1`] = `
<div
  className="encounter-table"
>
  <h2
    className="icon fa-gamepad"
  >
    Encounter list
  </h2>
  <div
    className="encounters-table--filter"
  >
    <div
      className="nice-control-group encounters-table--filter-select"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        data-name="search"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Search..."
        type="text"
        value=""
      />
    </div>
    <div
      className="nice-control-group encounters-table--filter-select"
    >
      <span
        className="nice-input-addon"
      >
        Campaign
      </span>
      <div
        className="nice-dropdown nice-form-control"
        data-name="campaign"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Campaigns...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value={2}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Some campaign
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group encounters-table--filter-min-max"
      data-name="cr"
    >
      <span
        className="nice-input-addon"
      >
        CR
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Min..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        min
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Max..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        max
      </span>
    </div>
    <div
      className="nice-control-group encounters-table--filter-min-max"
      data-name="xp"
    >
      <span
        className="nice-input-addon"
      >
        XP
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Min..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        min
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Max..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        max
      </span>
    </div>
  </div>
  <table
    className="responsive-table nice-table condensed bordered responsive"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Size
        </th>
        <th>
          Challenge Rating
        </th>
        <th>
          Campaign
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-name={1}
      >
        <th>
          Bar fight
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn-alt icon fa-eye"
              href={undefined}
              onClick={[Function]}
            >
              View
            </a>
            <a
              className="cursor-pointer nice-btn-alt icon fa-pencil"
              href={undefined}
              onClick={[Function]}
            >
              Edit
            </a>
          </div>
        </th>
        <td />
        <td
          className="warning"
        >
          <span>
            <strong>
              Challenge:
            </strong>
             
            <div
              className="challenge-rating inline"
            >
              CR 
              ½
            </div>
             / 
            <div
              className="xp-rating inline"
            >
              25
               XP
            </div>
          </span>
          <span>
            <strong>
              Modified:
            </strong>
             
            <div
              className="challenge-rating inline"
            >
              CR —
            </div>
             / 
            <div
              className="xp-rating inline"
            >
              — XP
            </div>
          </span>
        </td>
        <td>
          <div
            className="campaign-label inline"
          >
            Some campaign
          </div>
        </td>
      </tr>
      <tr>
        <td
          colSpan={4}
        >
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn-alt icon fa-plus"
              href={undefined}
              onClick={[Function]}
            >
              New
            </a>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`EncountersTable should render without props 1`] = `
<div
  className="encounter-table"
>
  <h2
    className="icon fa-gamepad"
  >
    Encounter list
  </h2>
  <div
    className="encounters-table--filter"
  >
    <div
      className="nice-control-group encounters-table--filter-select"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        data-name="search"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Search..."
        type="text"
        value=""
      />
    </div>
    <div
      className="nice-control-group encounters-table--filter-select"
    >
      <span
        className="nice-input-addon"
      >
        Campaign
      </span>
      <div
        className="nice-dropdown nice-form-control"
        data-name="campaign"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Campaigns...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        />
      </div>
    </div>
    <div
      className="nice-control-group encounters-table--filter-min-max"
      data-name="cr"
    >
      <span
        className="nice-input-addon"
      >
        CR
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Min..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        min
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Max..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        max
      </span>
    </div>
    <div
      className="nice-control-group encounters-table--filter-min-max"
      data-name="xp"
    >
      <span
        className="nice-input-addon"
      >
        XP
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Min..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        min
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Max..."
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        max
      </span>
    </div>
  </div>
  <table
    className="responsive-table nice-table condensed bordered responsive"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Size
        </th>
        <th>
          Challenge Rating
        </th>
        <th>
          Campaign
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan={4}
        >
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn-alt icon fa-plus"
              href={undefined}
              onClick={[Function]}
            >
              New
            </a>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
